# cmake-experiments

./: .gitignore  README.md
shared_code/projects/hello/: CMakeLists.txt  hello.cpp
shared_code/projects/hi/: CMakeLists.txt  hi.cpp
shared_code/shared_code/say_something/: CMakeLists.txt  say_something.cpp  say_something.h
simple/: CMakeLists.txt  hello_world.cpp
